--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.4.0",
+    "big.js": "^6.2.1",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
     "node-telegram-bot-api": "^0.61.0",
@@ -19,6 +20,7 @@
     "web3-eth-contract": "^1.9.0"
   },
   "devDependencies": {
+    "@types/big.js": "^6.1.6",
     "@types/node-telegram-bot-api": "^0.61.6",
     "copyfiles": "^2.4.1"
   }
