--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "big.js": "^6.2.1",
+    "bignumber.js": "^9.1.1",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
     "node-telegram-bot-api": "^0.61.0",
