added 1inch details

--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "phil",
   "license": "MIT",
   "dependencies": {
+    "abi-decoder": "^2.4.0",
     "axios": "^1.4.0",
+    "axios-retry": "^3.5.1",
     "big.js": "^6.2.1",
     "bignumber.js": "^9.1.1",
+    "bottleneck": "^2.19.5",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
     "node-telegram-bot-api": "^0.61.0",
