--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "node-telegram-bot-api": "^0.61.0",
     "typescript": "^5.0.4",
     "web3": "^1.9.0",
-    "web3-eth-contract": "^1.9.0"
+    "web3-eth-contract": "^1.9.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/big.js": "^6.1.6",
