--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bignumber.js": "^9.1.1",
     "bottleneck": "^2.19.5",
     "dotenv": "^16.0.3",
+    "elliptic": "^6.6.1",
     "ethereum-multicall": "^2.26.0",
     "fs": "^0.0.1-security",
     "node-telegram-bot-api": "^0.61.0",
@@ -24,6 +25,9 @@
     "web3": "^1.9.0",
     "web3-eth-contract": "^1.9.0",
     "xlsx": "^0.18.5"
+  },
+  "overrides": {
+    "elliptic": "6.6.1"
   },
   "devDependencies": {
     "@types/big.js": "^6.1.6",
